[tool.poetry]
name = "doh"
version = "0.1.0"
description = ""
authors = ["Jerguš Lejko <jergus.lejko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
docker = "^6.1.3"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
pydantic = "^2.0.2"
pyfzf = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
